@@ -1,3 +1,10 @@
+2003-01-06	Ujwal S. Sathyam <ujwal@setlurgroup.com>
+
+    * Remove fatal recursice loop by no calling 
+      [self setWindowSize] from PseudoTerminal: -windowDidResize.
+      The window sizing part needs some real attention.
+       
+
 2003-01-06	fabian
     * Fixed the display problem related to "bold"
     * Updated Chinese nib files for anti-aliasing and print&save
